[package]
name = "spot-orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.12.0"
dotenv = "0.15.0"
aws-sdk-ec2 = "0.12.0"
aws-sdk-cloudwatch = "0.12.0"
aws-types = "0.12.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
