[package]
name = "spot-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.0"
dotenv = "0.15.0"
aws-sdk-ec2 = "1.93.0"
aws-sdk-cloudwatch = "1.1.0"
aws-types = "1.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
